--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "giphy_search",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://jd1388.github.io/giphy_search/",
-  "dependencies": {
-    "react": "^16.2.0",
-    "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1",
-    "semantic-ui-css": "^2.3.0",
-    "semantic-ui-react": "^0.78.2"
-  },
+  "name": "svelte-app",
+  "version": "1.0.0",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "format": "npx prettier --write \"**/*.{js,svelte}\"",
+    "start": "sirv public"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0"
+    "@rollup/plugin-commonjs": "11.0.2",
+    "@rollup/plugin-node-resolve": "^7.0.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-svelte3": "^2.7.3",
+    "prettier": "^2.0.5",
+    "prettier-plugin-svelte": "^0.7.0",
+    "rollup": "^1.20.0",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^5.1.2",
+    "svelte": "^3.0.0"
+  },
+  "dependencies": {
+    "sirv-cli": "^0.4.4"
   }
 }
