Added Header component

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "svelte-jester": "^1.0.5"
   },
   "dependencies": {
-    "sirv-cli": "^0.4.4"
+    "sirv-cli": "^0.4.4",
+    "svelte-awesome": "^2.3.0"
   }
 }
