--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/svelte": "^3.0.0",
-    "babel-jest": "^25.5.1",
+    "babel-jest": "^26.0.1",
     "eslint": "^6.8.0",
     "eslint-plugin-svelte3": "^2.7.3",
-    "jest": "^25.5.4",
+    "jest": "^26.0.1",
+    "jest-circus": "^26.0.1",
     "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^0.7.0",
     "rollup": "^1.20.0",
