--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/svelte": "^3.0.0",
     "babel-jest": "^26.0.1",
+    "chance": "^1.1.4",
     "eslint": "^6.8.0",
     "eslint-plugin-svelte3": "^2.7.3",
     "jest": "^26.0.1",
