--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "es6": true
+        "es6": true,
+        "jest": true
     },
     "parserOptions": {
         "ecmaVersion": 2019,
@@ -16,6 +17,9 @@
     "rules": {
         "prettier/prettier": "error",
         "svelte3/lint-template": 2
+    },
+    "globals": {
+        "global": false
     }
 }
   
